# LL-DM

./: .gitignore  Dockerfile  README.md  app.py  audio_example.py  build-llama-cpp.sh  chainlit.md  docker-compose.yml  download_model.sh  environment.yml  exploration.ipynb  pyproject.toml  rag.ipynb
ll_dm/utils/: billing.py
notebooks/: LLDM.ipynb  guidance.ipynb  llama_index.ipynb
scripts/: build-llama-cpp.sh  download-model.sh
src/: agent.py  evaluation.py  models.py  vector_store.py
src/chat/: history.py  roles.py
