[project]
name = "ll-dm"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Diego Piccinotti", email = "elimdor@live.it"},
]
dependencies = [
    "transformers[torch]>=4.36.2",
    "sentencepiece>=0.1.99",
    "accelerate>=0.26.1",
    "chainlit>=1.0.100",
    "langchain>=0.1.4",
    "loguru>=0.7.2",
    "optimum>=1.16.1",
    "sentence-transformers>=2.2.2",
    "unstructured>=0.12.0",
    "cohere>=4.42",
    "langchain-openai>=0.0.2.post1",
    # "llama-cpp-python @ file:///${PROJECT_ROOT}/llama-cpp-python/dist/llama_cpp_python-0.2.31-cp310-cp310-manylinux_2_35_x86_64.whl",
    "faiss-cpu>=1.7.4",
    "langchainhub>=0.1.14",
    "llama-index==0.9.0",
    "trulens>=0.13.4",
    "trulens-eval>=0.18.3",
    "llama-cpp-python @ https://github.com/jllllll/llama-cpp-python-cuBLAS-wheels/releases/download/wheels/llama_cpp_python-0.2.26+cu121-cp310-cp310-manylinux_2_31_x86_64.whl",
    "openai>=1.10.0",
    "huggingface-hub>=0.20.3",
    "tiktoken>=0.5.2",
    "qdrant-client>=1.7.1",
    "torch<2.1.0",
    "pydantic<2",
]
requires-python = ">=3.10,<3.11"
readme = "README.md"
license = {text = "MIT"}

[project.optional-dependencies]
notebook = [
    "jupyter>=1.0.0",
    "ipykernel>=6.29.0",
]

lint = [
    "isort>=5.13.2",
    "black>=23.12.1",
    "pylint>=3.0.3",
]

[tool.pdm]
distribution = false


# [[tool.pdm.source]]
# name = "llama-cpp-python-cuda"
# # url = "https://jllllll.github.io/llama-cpp-python-cuBLAS-wheels/AVX2/rocm5.6.1/llama-cpp-python/"
# url = "https://jllllll.github.io/llama-cpp-python-cuBLAS-wheels/AVX2/cu121/llama-cpp-python/"
# include_packages = ["llama-cpp-python*"]



# [[tool.pdm.source]]
# name = "toch-rocm"
# url = "https://download.pytorch.org/whl/rocm5.6"
# include_packages = ["torch*"]
# exclude_packages = ["bar-*"]

